<resources>

    <string name="app_name">While I\'m Out</string>
    <string name="menu_settings">Settings</string>
    <string name="add_button_text">Create New Task</string>
    <string name="add_button_hint">Use this button to create a new task</string>
    <string name="log_file">&quot;/&quot;</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="title_task_list">Tasks</string>
    <string name="proximity_mode">Proximity Mode</string>
    <string name="description">Description</string>
    <string name="map_image_description">Map image of the task</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="location_text">Location</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_task_create">Create Task</string>
    <string name="create_task_name_hint">Name of task</string>
    <string name="street_address_text">Street Address</string>
    <string name="city_text">City</string>
    <string name="state_text">State</string>
    <string name="zip_code_text">Zip Code</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="create_button_text">Create</string>
    <string name="test_text">TEST TEXT</string>
    <string name="loading_image_text">Loading Google Map</string>
    <string name="time_interval_summary">The interval (in minutes) at which to check how often While I\'m Out will check how close you are to your tasks. Higher numbers save battery life</string>
    <string name="time_interval_title">Time Interval</string>
    <string name="proximity_interval_title">Proximity Interval</string>
    <string name="proximity_interval_summary">Select the distance (in meters) of how far away you wish to be before While I\'m Out will notify you</string>
    <string name="interval_preference_dialog_title">Please select an interval</string>
    <string name="metric_preferences_title">Metric to Measure</string>
    <string name="metric_preferences_summary">Select the type of metric you wish to measure with</string>
    <string name="proximity_switch_title">Notify Tasks</string>
    <string name="notify_tasks_summary_on">Turn Notify Tasks on. This will turn Proximity Mode on all your tasks to \"On\"</string>
    <string name="notify_tasks_summary_off">Turn Notify Tasks off. This will turn Proximity Mode on all your tasks to \"Off\"</string>

</resources>