<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetailActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/task_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="22dp"
            android:text="@string/test_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/task_detail"
            android:layout_below="@+id/task_detail"
            android:layout_marginTop="14dp"
            android:text="@string/location_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="24sp" />

        <RelativeLayout
            android:id="@+id/locationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="30dp" >

            <TextView
                android:id="@+id/streetAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back"
                android:text="@string/street_address_text"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/cityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/streetAddressTextView"
                android:background="@drawable/back"
                android:text="@string/city_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/stateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cityTextView"
                android:background="@drawable/back"
                android:text="@string/state_text"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/zipCodeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stateTextView"
                android:background="@drawable/back"
                android:text="@string/zip_code_text"
                android:textSize="24sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/proximityModeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/locationLayout"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/proximityModeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/proximity_mode"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <ToggleButton
                android:id="@+id/isProximityModeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/proximityModeLayout"
            android:layout_marginLeft="19dp"
            android:layout_marginRight="19dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/descriptionLabelView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="#FFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/test_text"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/descriptionLayout"
            android:layout_marginTop="10sp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/progress_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/loading_image_text" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/map_image_description"
                android:scaleType="centerInside"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>